unfollow endpoint + tests (handler & service) + is_active field
fix follow postgres test + add unfollow test
